responsive background images

--- a/index.html
+++ b/index.html
@@ -5,8 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piotrs Landscaping</title>
+    <link rel = "icon" href="/images/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href="/CSS/main.css"/>
+    <script src="main.js"></script>
+    <link rel="stylesheet" href="/CSS/nav.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
+<header>
+    <div class="top-space"></div>
+</header>
 <body>
-    
+    <nav>
+    <div class="topnav" id="myTopnav">
+        <img src="/images/Logo Piotrs Landscaping.png" width="140" height="62" class="active">
+        <a href="#home" >HOME</a>
+        <a href="#about">ABOUT</a>
+        <a href="#services">SERVICES</a>
+        <a href="#contact">CONTACT</a>
+        <a href="javascript:void(0);" class="icon" onclick=myFunction()>
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+</nav>
+<main>
+  <div>
+    <img src="/images/ipad-mower.png" width= 18000 height="956" class="ipad-mower"alt="push mower">
+    <img src="/images/mobile-mower.png"width= 750 height="1000" class="mobile-mower"alt="push mower">
+    <img src="/images/lawnmover pic.png" width=1920 height="1080" class="push-mower" alt="push mower">
+  </div>
+</main>
 </body>
 </html>
