landing page done

--- a/Pages/services.html
+++ b/Pages/services.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="/CSS/main.css"/>
-    <script src="main.js"></script>
+    <script src="/main.js"></script>
     <link rel="stylesheet" href="/CSS/nav.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -35,13 +35,7 @@
 </nav>
 <main>
   <div class="container">
-    <img src="/images/ipad-mower.png" width= 1800 height="956" class="ipad-mower"alt="push mower">
-    <img src="/images/mobile-mower.png"width= 750 height="1000" class="mobile-mower"alt="push mower">
-    <img src="/images/mobile2-mower.png"width= 750 height="1000" class="mobile-mower2"alt="push mower">
-    <img src="/images/lawnmover pic.png" width=1920 height="1080" class="push-mower" alt="push mower">
-    <div class="welcome"><h1>Welcome</h1></div>
-    <div class="hook"><p>Are you tired of doing all the hard labor around your house? If you are give us a call and we will take on all your projects.</p></div>
-    <button onclick ="document.location='/Pages/about.html'"class="learn-more"> CLICK HERE <br> TO LEARN MORE</button>
+    services
   </div>
 </main>
 </body>
