contact form looks complete, need to retrieve data

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -23,7 +23,7 @@
 <body>
     <nav>
     <div class="topnav" id="myTopnav">
-        <img src="/images/Logo Piotrs Landscaping.png" width="140" height="62" class="active">
+        <img src="/images/Logo Piotrs Landscaping.png" width="140" height="62" class="active" alt="Piotrs landscaping logo">
         <a href="/Pages/contact.html">CONTACT</a>
         <a href="/Pages/services.html">SERVICES</a>
         <a href="/Pages/about.html">ABOUT</a>
