php data sending for form

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -1,3 +1,5 @@
+<?php include "sendmail.php";?>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,7 +41,7 @@
   </div>
   <div class="container1">
   <div class="form">
-    <form action="/action.page.php">
+    <form action="/sendmail.php">
 
       <p class="fill-out">Please Fill Out The Form</p>
       <div class="firstName">
