fill out form header into h1 tag

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -42,7 +42,7 @@
   <div class="form">
     <form  name="contact" method="POST" data-netlify-recaptcha="true" data-netlify="true" >
 
-      <p class="fill-out">Please Fill Out The Form</p>
+      <h1 class="fill-out">Please Fill Out The Form</h1>
       <div class="firstName">
         <label for="fname">First Name</label>
         <input type="text" class="fname" name="firstname" placeholder="Your name..">
