--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" 
+    content="Affordable and professional Lawn Care and landscaping">
+    <meta name="keywords" 
+    content="lawncare, landscaping, affordable landscaping, professional lawncare, professional landscaping">
     <title>Piotrs Landscaping</title>
     <link rel = "icon" href="/images/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
