--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -43,35 +43,36 @@
     <form  name="contact" method="POST" data-netlify-recaptcha="true" data-netlify="true" >
 
       <h1 class="fill-out">Please Fill Out The Form</h1>
-      <div class="firstName">
+      <p class="firstName">
         <label for="fname">First Name</label>
         <input type="text" class="fname" name="firstname" placeholder="Your name..">
-      </div>
-      <div class="lastName">
+      </p>
+      <p class="lastName">
         <label for="lname">Last Name</label>
         <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-      </div>
-      <div class="email">
+      </p>
+      <p class="email">
         <label for="email">Email</label>
         <input type="text" id="email" name="emailAddress" placeholder="example@gmail.com">
-      </div>
-      <div class="phoneNumber">
+      </p>
+      <p class="phoneNumber">
         <label for="phoneNumber">Phone Number</label>
         <input type="text" id="phoneNumber" name="phonenumber" placeholder="(123)-456-7890">
-      </div>
-      <div class="address">
+      </p>
+      <p class="address">
         <label for="address"> Address</label>
         <input type="text" id="address" name="Address" placeholder="123 Example street, Washington, DC, 01123">
-      </div>
-      <div class="description">
+      </p>
+      <p class="description">
         <label for="description">Description</label>
         <textarea id="description" name="Description"
           placeholder="I want trimming and mulch around my house. How much?">
           </textarea>
-        </div>
-      <div class="submit">
+        </p>
+          <div data-netlify-recaptcha="true"></div>
+      <p class="submit">
         <input type="submit" value="Submit">
-      </div>
+      </p>
     </form>
   </div>
   </div>
