maybe fixes captcha alignment

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -69,7 +69,7 @@
           placeholder="I want trimming and mulch around my house. How much?">
           </textarea>
         </p>
-          <div data-netlify-recaptcha="true"></div>
+          <div class="captcha" data-netlify-recaptcha="true"></div>
       <p class="submit">
         <input type="submit" value="Submit">
       </p>
