--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -69,7 +69,8 @@
           placeholder="I want trimming and mulch around my house. How much?">
           </textarea>
         </p>
-          <div class="captcha" data-netlify-recaptcha="true"></div>
+          <div class="recaptcha" data-netlify-recaptcha="true"></div>
+          <style>.recaptcha{margin: auto;} </style>
       <p class="submit">
         <input type="submit" value="Submit">
       </p>
